[project]
name = "jarvis"
version = "0.1.0"
description = "JARVIS — Personal AI Assistant with 3-Tier Memory (LangGraph + Groq LLaMA 3.3 70B)"
requires-python = ">=3.11"
dependencies = [
    # ── Core LangGraph / LangChain ────────────────────────────────────────────
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-groq>=0.1",
    "langchain-core>=0.2",
    # ── LLM & Token Counting ──────────────────────────────────────────────────
    "tiktoken>=0.7",
    "groq>=0.9",
    # ── Vector DB (Tier 2 — Episodic RAG) ────────────────────────────────────
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
    # ── Persistence ───────────────────────────────────────────────────────────
    "langgraph-checkpoint-sqlite>=2.0",
    # ── Utilities ─────────────────────────────────────────────────────────────
    "python-dotenv>=1.0",
    "rich>=13.0",
    "pyfiglet>=1.0",
    "faster-whisper>=1.2.1",
    "edge-tts>=7.2.8",
    "sounddevice>=0.5.5",
    "playsound3>=3.3.1",
    "psutil>=7.2.2",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
# Voice mode — install with: uv sync --extra voice
voice = [
    "faster-whisper>=1.0",
    "edge-tts>=6.1",
    "sounddevice>=0.4",
    "playsound3>=1.0",   # Windows MCI playback — no compilation, works on Python 3.14
    "psutil>=5.9",
    "scipy>=1.11",       # scipy.io.wavfile for Whisper audio format conversion
]

[project.scripts]
jarvis = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
